    fine by themselves), so it's obsolete now.
  * Drop enable{sharing,browsing} and {sharing,browsing}_status scripts. They
    have never been used in Debian, not used any more in Ubuntu, and the
    current frontends (web, system-config-printer, etc.) do this in a much
    better way.
  * debian/docs: Remove redundant LICENSE.txt.

 -- Martin Pitt <mpitt@debian.org>  Tue, 26 Feb 2008 13:38:36 +0100

cupsys (1.3.5-2) unstable; urgency=low

  [ Martin Pitt ]
  * debian/cupsys.init.d: Add Should-Start: avahi. (Closes: #459662)

  [ Till Kamppeter ]
  * debian/patches/pdftops-cups-1.4.dpatch, debian/local/filters/pdftops:
    Replaced Helge Blischke's alternative pdftops wrapper by the pdftops
    of CUPS 1.4. The old pdftops wrapper did not work with the pdftops
    filter of Poppler, the new one works with the pdftops filters of both
    Poppler and XPDF (Closes: #457810; Ubuntu LP: #182379).
  * debian/patches/web-interface-breaks-default-auth-setting.dpatch: When
    modifying server settings with the CUPS web interface, the setting
    for the default authentication got overwritten with gibberish
    (Closes: #461331; CUPS STR #2703, Ubuntu LP: #188426).
  * debian/local/backends/dnssd: Updated dnssd to filter out IPv6 entries,
    as they clutter the lists of detected printers and make the network
    printer discovery process taking more time than needed. Applied also
    a bug fix and the possibility of querying one IP address by calling
    the dnssd backend with the IP as command line argument (like the
    snmp CUPS backend).

 -- Martin Pitt <mpitt@debian.org>  Mon, 25 Feb 2008 11:13:15 +0100

cupsys (1.3.5-1) unstable; urgency=high

  [ Kenshi Muto]
  * New upstream release
    - cups-stops-broadcasting-on-HUP-with-explicit-BrowseAddress patch is
      merged.
    - Fix that SNMP backend did not check for negative string lengths.
      (CVE-2007-5849, closes: #457453).
  * Update pdftops.pl to 1.20. It fixes overwriting arbitary files