@@ -15,8 +15,10 @@ cupsys (1.3.6-1) UNRELEASED; urgency=low
     current frontends (web, system-config-printer, etc.) do this in a much
     better way.
   * debian/docs: Remove redundant LICENSE.txt.
+  * debian/rules: Add a generic rule to install lintian overrides in
+    debian/packagename.lintian.
 
- -- Martin Pitt <mpitt@debian.org>  Tue, 26 Feb 2008 13:38:36 +0100
+ -- Martin Pitt <mpitt@debian.org>  Tue, 26 Feb 2008 13:52:09 +0100
 
 cupsys (1.3.5-2) unstable; urgency=low
 
